fixed z-index breaking when scrolling bug

--- a/components/footer.module.sass
+++ b/components/footer.module.sass
@@ -3,9 +3,11 @@
 
 .footer
     // color: $selected-color
-    margin-top: 10rem
     position: relative
+    z-index: 4
+    transform: translate3d(0,0,0)
 
+    margin-top: 10rem
     padding: 8rem
 
     padding-top: 4rem
