--- a/components/layout.module.sass
+++ b/components/layout.module.sass
@@ -3,6 +3,7 @@
 
 .layout
     // background: #ffaeae
+    position: relative
     z-index: 5
     padding-top: 8rem
     display: flex
